Update PostgreSQL service configuration in workflow [skip ci]

--- a/.github/workflows/docker-image-2.yml
+++ b/.github/workflows/docker-image-2.yml
@@ -17,12 +17,12 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         ports:
-          - 5432:5432
+          - 5432/tcp
         options: >-
-          --health-cmd pg_isready -U postgres
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
       - uses: actions/checkout@v4
 
@@ -39,18 +39,18 @@ jobs:
       - name: Reset and migrate Prisma schema
         run: npx prisma migrate reset --force --skip-seed
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
+          DATABASE_URL: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/realworld_test
 
       # Seed test data (optional, if your tests expect a default user)
       - name: Seed test database
         run: npx prisma db seed
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
+          DATABASE_URL: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/realworld_test
 
       - name: Run tests
         run: npx nx test --passWithNoTests --verbose
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
+          DATABASE_URL: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/realworld_test
 
   build-push:
     needs: test
