--- a/.github/workflows/docker-image-2.yml
+++ b/.github/workflows/docker-image-2.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch: # 👈 allows manual runs from Actions tab    
 
 jobs:
   test:
