--- a/.github/workflows/docker-image-2.yml
+++ b/.github/workflows/docker-image-2.yml
@@ -57,6 +57,7 @@ jobs:
   build-push:
 #    needs: test
     runs-on: ubuntu-latest
+    environment: PROD
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
