--- a/.github/workflows/docker-image-2.yml
+++ b/.github/workflows/docker-image-2.yml
@@ -68,8 +68,16 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Cache 
+        uses: actions/cache@v4 
+        with:
+          path: ~/.npm 
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }} 
+          restore-keys: | 
+            ${{ runner.os }}-node-     
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline
 
       - name: Build app with Nx
         run: npx nx build api
