--- a/.github/workflows/docker-image-2.yml
+++ b/.github/workflows/docker-image-2.yml
@@ -11,54 +11,22 @@ on:
   workflow_dispatch: # 👈 allows manual runs from Actions tab    
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   services:
-  #     postgres:
-  #       image: postgres:15-alpine
-  #       env:
-  #         POSTGRES_DB: realworld_test
-  #         POSTGRES_USER: postgres
-  #         POSTGRES_PASSWORD: postgres
-  #       ports:
-  #         - 5432:5432
-  #       options: >-
-  #         --health-cmd="pg_isready -U postgres"
-  #         --health-interval=10s
-  #         --health-timeout=5s
-  #         --health-retries=5
-  #   steps:
-  #     - uses: actions/checkout@v4
-
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
-  #         cache: npm
-
-  #     - name: Install dependencies
-  #       run: npm ci
-
-  #     - name: Reset and migrate Prisma schema
-  #       run: npx prisma migrate reset --force --skip-seed
-  #       env:
-  #         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
-
-  #     - name: Seed test database
-  #       run: npx prisma db seed
-  #       env:
-  #         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
-
-  #     - name: Run tests
-  #       run: npx nx test --passWithNoTests --verbose
-  #       env:
-  #         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
-
-  build-push:
-#    needs: test
+  test:
     runs-on: ubuntu-latest
-    environment: PROD
-    if: github.ref == 'refs/heads/master'
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_DB: realworld_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
       - uses: actions/checkout@v4
 
@@ -68,41 +36,73 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Cache 
-        uses: actions/cache@v4 
-        with:
-          path: ~/.npm 
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }} 
-          restore-keys: | 
-            ${{ runner.os }}-node-     
-
       - name: Install dependencies
-        run: npm ci --prefer-offline
+        run: npm ci
 
-      - name: Build app with Nx
-        run: npx nx build api
+      - name: Reset and migrate Prisma schema
+        run: npx prisma migrate reset --force --skip-seed
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Seed test database
+        run: npx prisma db seed
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
+
+      - name: Run tests
+        run: npx nx test --passWithNoTests --verbose
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/realworld_test
+
+#   build-push:
+#     needs: test
+#     runs-on: ubuntu-latest
+#     environment: PROD
+#     if: github.ref == 'refs/heads/master'
+#     steps:
+#       - uses: actions/checkout@v4
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 20
+#           cache: npm
+
+#       - name: Cache 
+#         uses: actions/cache@v4 
+#         with:
+#           path: ~/.npm 
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }} 
+#           restore-keys: | 
+#             ${{ runner.os }}-node-     
+
+#       - name: Install dependencies
+#         run: npm ci --prefer-offline
+
+#       - name: Build app with Nx
+#         run: npx nx build api
+
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v3
         
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-          aws-region: ${{ env.AWS_REGION }}
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v4
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+#           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+#       - name: Login to Amazon ECR
+#         id: login-ecr
+#         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ steps.login-ecr.outputs.registry }}/incodedemo-api:${{ github.sha }}
-            ${{ steps.login-ecr.outputs.registry }}/incodedemo-api:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+#       - name: Build and push Docker image
+#         uses: docker/build-push-action@v6
+#         with:
+#           context: .
+#           push: true
+#           tags: |
+#             ${{ steps.login-ecr.outputs.registry }}/incodedemo-api:${{ github.sha }}
+#             ${{ steps.login-ecr.outputs.registry }}/incodedemo-api:latest
+#           cache-from: type=gha
+#           cache-to: type=gha,mode=max
