--- a/.github/workflows/docker-image-2.yml
+++ b/.github/workflows/docker-image-2.yml
@@ -30,14 +30,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: JustDemo
+        run: echo "Running tests for branch $GITHUB_REF_NAME"
+        shell: bash
+        
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
+      - name: Cache 
+        uses: actions/cache@v4 
+        with:
+          path: ~/.npm 
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }} 
+          restore-keys: | 
+            ${{ runner.os }}-node-   
+            
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline
 
       - name: Reset and migrate Prisma schema
         run: npx prisma migrate reset --force --skip-seed
