--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: incodedemo-api
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: incodedemo-api
@@ -15,30 +15,111 @@ spec:
         app: incodedemo-api
     spec:
       containers:
-      - name: api
-        image: 485876940116.dkr.ecr.us-east-1.amazonaws.com/incodedemo-api:latest
-        ports:
-        - containerPort: 3000
-        env:
-          - name: DB_USER
-            valueFrom:
-              secretKeyRef:
-                name: db-credentials
-                key: DB_USER
-          - name: DB_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: db-credentials
-                key: DB_PASSWORD
-          - name: DB_HOST
-            valueFrom:
-              secretKeyRef:
-                name: db-credentials
-                key: DB_HOST
-          - name: DATABASE_URL
-            value: "postgresql://$(DB_USER):$(DB_PASSWORD)@$(DB_HOST):5432/incodedemo?schema=public"
-          - name: NODE_ENV
-            value: "production"
-          - name: PORT
-            value: "3000"
-
+        - name: api
+          image: 485876940116.dkr.ecr.us-east-1.amazonaws.com/incodedemo-api:latest
+          ports:
+            - containerPort: 3000
+          env:
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: DB_USER
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: DB_PASSWORD
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: DB_HOST
+            - name: DATABASE_URL
+              value: "postgresql://$(DB_USER):$(DB_PASSWORD)@$(DB_HOST):5432/incodedemo?schema=public"
+            - name: NODE_ENV
+              value: "production"
+            - name: PORT
+              value: "3000"
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: incodedemo-api
+  labels:
+    app: incodedemo-api
+spec:
+  type: ClusterIP
+  selector:
+    app: incodedemo-api
+  ports:
+    - name: http
+      port: 80        # exposed on port 80
+      targetPort: 3000 # forwards to container port 3000
+      protocol: TCP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: incodedemo-api
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/healthcheck-path: /api/health
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: incodedemo-api
+                port:
+                  number: 80
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: incodedemo-api-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: incodedemo-api
+  minReplicas: 3
+  maxReplicas: 6
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 70
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 80
